--- a/action.yaml
+++ b/action.yaml
@@ -18,7 +18,7 @@ runs:
       shell: bash
       run: |
         if [[ "${{ inputs.install-secrethub }}" == "true" ]]; then
-          curl https://apt.secrethub.io | bash
+          sudo bash -c "curl https://apt.secrethub.io | bash"
           secrethub --version
         fi
         
