[ncheneweth] add kubectl, helm

--- a/action.yaml
+++ b/action.yaml
@@ -13,6 +13,14 @@ inputs:
     description: install current release version of awspec
     required: false
     default: 'false'
+  install-kubectl:
+    description: install current release version of kubectl
+    required: false
+    default: 'false'
+  install-helm:
+    description: install current release version of helm
+    required: false
+    default: 'false'
 
 runs:
   using: "composite"
@@ -33,4 +41,22 @@ runs:
           sudo gem install awspec
           awspec --version
         fi
-        
+    - name: install-kubectl
+      working-directory: ${{ inputs.working-directory }}
+      shell: bash
+      run: |
+        if [[ "${{ inputs.install-kubectl }}" == "true" ]]; then
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+          kubectl version --client
+        fi
+    - name: install-helm
+      working-directory: ${{ inputs.working-directory }}
+      shell: bash
+      run: |
+        if [[ "${{ inputs.install-helm }}" == "true" ]]; then
+          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+          chmod 700 get_helm.sh
+          sudo bash -c "./get_helm.sh"
+          helm --version
+        fi
