--- a/action.yaml
+++ b/action.yaml
@@ -9,6 +9,10 @@ inputs:
     description: install current release version of secrethub
     required: false
     default: 'false'
+  install-aws-cli:
+    description: install current release version of aws-cli
+    required: false
+    default: 'false'
   install-awspec:
     description: install current release version of awspec
     required: false
@@ -32,6 +36,15 @@ runs:
         if [[ "${{ inputs.install-secrethub }}" == "true" ]]; then
           sudo bash -c "curl https://apt.secrethub.io | bash"
           secrethub --version
+        fi
+    - name: install-aws-cli
+      working-directory: ${{ inputs.working-directory }}
+      shell: bash
+      run: |
+        if [[ "${{ inputs.iinstall-aws-cli }}" == "true" ]]; then
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
         fi
     - name: install-awspec
       working-directory: ${{ inputs.working-directory }}
