[ncheneweth] add --version check on aws-cli install

--- a/action.yaml
+++ b/action.yaml
@@ -45,6 +45,7 @@ runs:
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
           sudo ./aws/install
+          aws --version
         fi
     - name: install-awspec
       working-directory: ${{ inputs.working-directory }}
