--- a/action.yaml
+++ b/action.yaml
@@ -41,7 +41,7 @@ runs:
       working-directory: ${{ inputs.working-directory }}
       shell: bash
       run: |
-        if [[ "${{ inputs.iinstall-aws-cli }}" == "true" ]]; then
+        if [[ "${{ inputs.install-aws-cli }}" == "true" ]]; then
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
           sudo ./aws/install
