[ncheneweth] action testing

--- a/action.yaml
+++ b/action.yaml
@@ -72,5 +72,5 @@ runs:
           curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
           chmod 700 get_helm.sh
           sudo bash -c "./get_helm.sh"
-          helm --version
+          helm version
         fi
