[ncheneweth] action testing

--- a/action.yaml
+++ b/action.yaml
@@ -83,6 +83,6 @@ runs:
       shell: bash
       run: |
         if [[ "${{ inputs.install-bats }}" == "true" ]]; then
-          npm install -g bats
-          bats version
+          sudo npm install bats
+          bats --version
         fi
