[ncheneweth] action testing

--- a/action.yaml
+++ b/action.yaml
@@ -83,7 +83,6 @@ runs:
       shell: bash
       run: |
         if [[ "${{ inputs.install-bats }}" == "true" ]]; then
-        
-          # sudo npm install -g bats
-          # bats --version
+          sudo npm install -g bats
+          bats --version
         fi
